# edge

./: .gitignore  CLAUDE.md  Edge26.uproject  PROGRESS.md  README.md  RUNBOOK.md  project_breakdown.md
.attic/: README.md
.attic/inflight-prototype/scripts/: align_goals.py  bake_pitch_markings.py
.github/workflows/: determinism.yml
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: NewBlueprint.uasset
Content/Animation/: IK_AutoGeneratedSource.uasset  IK_AutoGeneratedTarget.uasset  RTG_AutoGenerated.uasset
Content/Animation/Mixamo_Raw/: Soccer_Header_Anim.uasset  Soccer_Idle_Anim.uasset  Soccer_Pass_Anim.uasset  Soccer_Pass_Skeleton.uasset  Soccer_Tackle_Anim.uasset  Strike_Foward_Jog_Anim.uasset
Content/Animation/Mixamo_Retargeted/: Goalkeeper_Body_Block_Anim.uasset  Goalkeeper_Diving_Save_Anim.uasset  Goalkeeper_Diving_Save__1__Anim.uasset  Goalkeeper_Idle_Anim.uasset  Goalkeeper_Overhand_Throw__1__Anim.uasset  Soccer_Header_Anim.uasset  Soccer_Idle_Anim.uasset  Soccer_Pass_Anim.uasset  Soccer_Tackle_Anim.uasset  Strike_Foward_Jog_Anim.uasset
Content/Animation/Montages/: AM_GK_DiveSave.uasset  AM_Kick_OutField.uasset
Content/Blueprints/Ball/: BP_SoccerBall.uasset
Content/Input/: IA_Chip.uasset  IA_Look.uasset  IA_Move.uasset  IA_Pass.uasset  IA_Shoot.uasset  IA_Sprint.uasset  IMC_Player.uasset
Content/Levels/: L_Pitch.umap
Content/Materials/: Cut_Grass_sfenffsa_8K_BaseColor_Mat.uasset  M_Pitch_Grass.uasset  Uncut_Grass_oilpt20_8K_BaseColor_Mat.uasset
Content/Python/: setup_opponent.py  setup_pitch_material.py
Content/ThirdPerson/: MI_ThirdPersonColWay.uasset
Scripts/: check_determinism.sh  lint_sim.sh  update_determinism_baseline.sh
Scripts/editor/: add_anim_notifies.py  add_switch_input.py  configure_blueprints.py  create_abp_footballer_mm.py  create_abp_goalkeeper.py  create_bp_goalkeeper.py  create_mmdb_goalkeeper.py  create_mmdb_outfield.py  create_montages.py  insert_foot_ik_nodes.py  insert_pose_history_collector.py  inspect_bp_game_mode.py  inspect_imc.py  place_ai_debug_renderer.py  populate_mmdb_outfield.py  populate_mmdbs_football.py  reparent_blueprints.py  reparent_game_mode.py  spawn_22_players.py  swap_pawn_anim_bps.py  wire_abp_footballer_mm_graph.py  wire_abp_goalkeeper_graph.py
Source/: Edge26.Target.cs  Edge26Editor.Target.cs
Source/Edge26/: Edge26.Build.cs
Source/Edge26Sim/: Edge26Sim.Build.cs
Source/Edge26SimStandalone/: CMakeLists.txt  ReplayIO.cpp  ReplayIO.h  main.cpp
Source/Edge26SimStandalone/tests/: TestHarness.h  replay_generator.cpp  test_math.cpp  test_snapshot.cpp
Source/Edge26SimStandalone/tests/replays/: ai_match_30s.expected.hashes  ai_match_30s.input  ball_only.expected.hashes  ball_only.input  basic.expected.hashes  basic.input  rollback_torture.expected.hashes  rollback_torture.input
(+122 files in other folders)
